syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "./;proto";

/**
*Author: AxisZql
*Date: 2022-5-31
*DESC: logic layer rpc interface define（逻辑层rpc接口定义）
 */

service Logic{
  rpc Connect(ConnectRequest) returns(ConnectReply); // 用户连接服务
  rpc DisConnect(DisConnectRequest) returns(google.protobuf.Empty); // 用户断开服务
  rpc Register(RegisterRequest) returns(RegisterReply);// 新用户注册
  rpc Login(LoginRequest) returns(LoginReply);//登陆
  rpc LoginOut(LoginOutRequest) returns(google.protobuf.Empty);//登出
  rpc GetUserInfoByAccessToken(GetUserInfoByAccessTokenRequest) returns(GetUserInfoByAccessTokenReply);//通过凭证换取用户信息
  rpc GetUserInfoByUserid(GetUserInfoByUseridRequest) returns(GetUserInfoByUseridReply);//通过userid换取用户信息
  rpc UpdateUserInfo(UpdateUserInfoRequest) returns(UpdateUserInfoReply);//更新用户信息
  rpc UpdatePassword(UpdatePasswordRequest) returns(google.protobuf.Empty);//更新用户密码
  rpc SearchUser(SearchUserRequest) returns(SearchUserReply);//根据用户名搜索用户
  rpc SearchGroup(SearchGroupRequest) returns(SearchGroupReply);//根据群名搜索群聊
  rpc GetGroupMsgByPage(GetGroupMsgByPageRequest) returns(GetGroupMsgByPageReply);//分页获取群聊消息
  rpc GetFriendMsgByPage(GetFriendMsgByPageRequest) returns(GetFriendMsgByPageReply);//分页获取私聊消息
  rpc CreateGroup(Group) returns(Group);//创建群聊
  rpc AddGroup(AddGroupRequest) returns(google.protobuf.Empty);//加入群聊
  rpc AddFriend(AddFriendRequest) returns(google.protobuf.Empty);//添加好友
  rpc Push(PushRequest) returns(google.protobuf.Empty);//私聊消息推送
  rpc PushRoom(PushRoomRequest) returns(google.protobuf.Empty);//群聊消息推送
  rpc PushRoomCount(PushRoomCountRequest) returns(google.protobuf.Empty);//推送群聊在线人数消息
  rpc PushRoomInfo(PushRoomInfoRequest) returns(google.protobuf.Empty);//推送群聊信息消息


}

message ConnectRequest{
  string access_token = 1; // 用户登陆后获取的生成的唯一有效凭证
  string server_id = 2; // 当前用户在connect层连接的服务实例id
}

message ConnectReply{
  int64 userid = 1;
}

message DisConnectRequest{
  int64 userid = 1;
}

message RegisterRequest{
  string username = 1;
  string password = 2;
}

message RegisterReply{
  int32 code = 1;
  string access_token = 2;
}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message LoginReply{
  int32  code = 1;
  string access_token = 2;
}

message LoginOutRequest {
  string access_token = 1;
}

message GetUserInfoByAccessTokenRequest{
  string access_token = 1;
}

message GetUserInfoByAccessTokenReply{
  int32 code = 1;
  int64 userid = 2;
  string username = 3;
}

message GetUserInfoByUseridRequest {
  int64 userid = 1;
}

message GetUserInfoByUseridReply{
  int32 code = 1;
  int64 userid = 2;
  string username = 3;
}

message User {
  int64 userid = 1;
  string username = 2;
  string avatar = 3;
  string role = 4;
  int32 status = 5;
  string tag = 6;
  int64 create_time = 7;
  int64 update_time = 8;
}

message UpdateUserInfoRequest{
  User user = 1;
}

message UpdateUserInfoReply{
  int32 code = 1;
  User user = 2;
}

message UpdatePasswordRequest{
  int64 userid = 1;
  string old_password = 2;
  string new_password1 = 3;
  string new_password2 = 4;
}

message SearchUserRequest{
  string username = 1;
}

message SearchUserReply{
  User user = 1;
}

message Group {
  int64 group_id = 1;
  int64 userid = 2;
  string group_name = 3;
  string notice = 4;
  int64  create_time = 5;
  int64 update_time = 6;
}

message SearchGroupRequest{
  string group_name = 1;
}

message SearchGroupReply{
  Group group = 1;
}

message ChatMessage {
  int64 id = 1;
  int64 userid = 2;
  int64 group_id = 3;
  int64 friend_id = 4;
  string content = 5;
  string message_type = 6;
  int64 create_time = 7;
  string from_username = 8;
  string friend_name = 9;
  string group_name = 10;
}

message GetGroupMsgByPageRequest {
  int64 group_id = 1;
  int64 userid = 2;
  int64 current = 3;
  int64 page_size =4;
}

message GetGroupMsgByPageReply{
  int32 code = 1;
  repeated ChatMessage message_arr = 2;
  repeated User user_arr = 3;
}

message GetFriendMsgByPageRequest{
  int64 friend_id = 1;
  int64 userid = 2;
  int64 current = 3;
  int64 page_size =4;
}

message GetFriendMsgByPageReply{
  repeated ChatMessage message_arr = 1;
}

message AddGroupRequest{
  int64 userid = 1;
  int64 group_id = 2;
}

message AddFriendRequest{
  int64 userid = 1;
  int64 friend_id = 2;
}

message PushRequest{
  ChatMessage msg = 1;
}

message PushRoomRequest{
  ChatMessage msg = 1;
}

message PushRoomCountRequest{
  int64 group_id = 1;
}

message PushRoomInfoRequest{
  int64 group_id = 1;
}